refactor(properties): migration to v2 properties (#87)